--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ input {
     border-color: hsla(0, 0%, 50%, 0.21)
 }
 
-input[type=select] {
+input[type=text] {
     background-color: antiquewhite;
 }
 
