--- a/styles.css
+++ b/styles.css
@@ -24,31 +24,31 @@ body {
     width: inherit;
 }
 
-input {
+input, select {
     border-top: 0;
     border-left: 0;
     border-right: 0;
     margin-left: 10px;
     margin-right: 10px;
-    border-color: hsla(0, 0%, 50%, 0.21)
-}
-
-input[type=text] {
+    border-color: hsla(0, 0%, 50%, 0.21);
     background-color: antiquewhite;
+    font-family: Verdana, sans-serif;
+    width: auto;
+    min-width: 100px;
+    font-size: 12px;
 }
 
 #mainDiv, #secondDiv {
     border: 50px;
     background-color: tan;
-    padding: 30px;
+    padding: 25px;
     border-radius: 20px;
-    
 }
 
 .center {
     margin: auto;
     min-width: 200px;
-    max-width: 500px;
+    max-width: 650px;
 }
 
 h3 {
